Add Login function

--- a/UserSystem.Business/UserSystem.Business.csproj
+++ b/UserSystem.Business/UserSystem.Business.csproj
@@ -40,8 +40,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserManager.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UserSystem.Data\UserSystem.Data.csproj">
+      <Project>{CB5A2E1A-8F9D-42FD-A32E-20E7EA07BEB6}</Project>
+      <Name>UserSystem.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UserSystem.DBUtility\Maticsoft.DBUtility.csproj">
+      <Project>{0988C62E-247F-471F-A183-DB509C7A3839}</Project>
+      <Name>Maticsoft.DBUtility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UserSystem.Model\UserSystem.Model.csproj">
+      <Project>{6EC76432-5526-4ED7-8533-837D315061B6}</Project>
+      <Name>UserSystem.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
