--- a/UserSystem.Web/UserSystem.Web.csproj
+++ b/UserSystem.Web/UserSystem.Web.csproj
@@ -37,9 +37,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
+    <Reference Include="System.Data.SQLite, Version=1.0.62.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\CodematicDemo\Lib\System.Data.SQLite.DLL</HintPath>
+      <HintPath>..\DLL\System.Data.SQLite.DLL</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
@@ -801,6 +801,7 @@
     <Content Include="jquery-easyui-1.3.2\themes\metro\window.css" />
     <Content Include="Scripts\Common\Login.js" />
     <None Include="App_Data\sqlite.db" />
+    <None Include="Content\datagrid_data1.json" />
     <None Include="Content\tree.json" />
     <None Include="jquery-easyui-1.3.2\demo\accordion\datagrid_data1.json" />
     <None Include="jquery-easyui-1.3.2\demo\combobox\combobox_data1.json" />
@@ -825,7 +826,7 @@
     <None Include="jquery-easyui-1.3.2\themes\default\images\Thumbs.db" />
     <None Include="jquery-easyui-1.3.2\themes\gray\images\Thumbs.db" />
     <None Include="jquery-easyui-1.3.2\themes\metro\images\Thumbs.db" />
-    <None Include="System.Data.SQLite.DLL" />
+    <Content Include="Scripts\Common\UserManager.js" />
     <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\Account\Login.aspx" />
     <Content Include="Views\Home\UserManager.aspx" />
